# py-draughts

./: .buildinfo  .gitignore  CLAUDE.md  ai.html  benchmark_results.csv  benchmarking.html  changelog.md  comparison.html  core.html  engine.html  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  readme.md  readme.rst  requirements.txt  robots.txt  search.html  searchindex.js  server.html  setup.py  sitemap.xml  svg.html
.claude/: settings.local.json
.doctrees/: ai.doctree  benchmarking.doctree  comparison.doctree  core.doctree  engine.doctree  environment.pickle  index.doctree  server.doctree  svg.doctree
.github/workflows/: docs.yaml  python-app.yml  python-publish.yml
_modules/: index.html
_modules/draughts/: benchmark.html
_modules/draughts/boards/: base.html
_modules/draughts/engines/: agent.html  alpha_beta.html  engine.html  hub.html
_modules/draughts/server/: server.html
_sources/: ai.rst.txt  comparison.rst.txt  core.rst.txt  engine.rst.txt  index.rst.txt  server.rst.txt  svg.rst.txt
_static/: custom.css  documentation_options.js
app/: board.py  main.py  models.py
app/static/css/: style.css
app/static/js/: script.js
checkers/: __init__.py  american.py  american_board.py  base.py  base_board.py  main.py  models.py  move.py  server.py  standard.py  utils.py
checkers/static/css/: style.css
checkers/static/js/: script.js
checkers/templates/: base.html  index.html
docs/: requirements.txt
docs/source/: ai.rst  american.rst  base.rst  benchmarking.rst  conf.py  core.rst  engine.rst  frisian.rst  hub.rst  index.rst  move.rst  server.rst  standard.rst  svg.rst
docs/source/_static/: custom.css
draughts/: __init__.py  __main__.py  american.py  base.py  benchmark.py  engine.py  frisian.py  hub.py  models.py  move.py  server.py  standard.py  svg.py  utils.py
draughts/boards/: __init__.py  american.py  antidraughts.py  base.py  brazilian.py  breakthrough.py  frisian.py  frysk.py  russian.py  standard.py
draughts/engines/: __init__.py  agent.py  alpha_beta.py  engine.py  hub.py
draughts/server/: __init__.py  server.py
draughts/server/static/css/: style.css
draughts/server/static/js/: script.js
draughts/server/templates/: base.html  index.html
draughts/static/css/: style.css
draughts/static/js/: script.js
draughts/templates/: base.html  index.html
examples/: ai.ipynb  alphabeta_vs_scan.py  article.md  benchmark_engine.py  custom_agents.py  eg1.py  engine.py  evaluate_engine.py  generate_data.ipynb  mcts_engine.ipynb  reinforcement_learning.py  sample.py
fast_checkers/: _debug.ipynb  american_board.py  base_board.py  board.py  game.py  main.py  models.py  utils.py
fast_checkers/static/js/: script.js
test/: _test_helpers.py  test_ai_features.py  test_american_board.py  test_antidraughts_board.py  test_benchmark.py  test_board.py  test_board_invariants.py  test_brazilian_board.py  test_breakthrough_board.py  test_engine.py  test_engine_correctness.py  test_engine_tactics.py  test_frisian_board.py  test_frysk_board.py  test_hub.py  test_move.py  test_pdn.py  test_russian_board.py  test_server.py  test_standard_board.py  test_tactical.py  test_tuning.py
test/games/american/: 1.txt  random_pdns.json
test/games/antidraughts/: random_pdns.json
test/games/brazilian/: random_pdns.json
test/games/breakthrough/: random_pdns.json
test/games/frisian/: random_pdns.json
test/games/frysk/: random_pdns.json
test/games/russian/: random_pdns.json
test/games/standard/: legal_moves_len.json  random_pdns.json
tools/: compare_pydraughts.py  compare_versions.py  create_snapshot.py  depth_benchmark.py  generate_benchmark_charts.py  generate_variant_pdns.py  get_games_from_lidraughts.py  get_pdns_from_lidraughts.py  openings.csv  profile_engine.py  profile_engine_detailed.py  profile_legal_moves.py  random_positions.json  tune_eval.py
tools/workers/: __init__.py  benchmark_legal_moves.py  engine_worker.py  get_engine_move.py
uml/: classes.dot  packages.dot
