[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-draughts"
version = "1.6.0"
description = "A draughts library with advanced (customizable) WEB UI move generation and validation, PDN parsing and writing. Supports multiple variants of game."
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    { name = "Michał Skibiński", email = "mskibinski109@gmail.com" }
]
keywords = ["draughts", "checkers", "AI", "mini-max", "game", "board"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "numpy",
    "loguru",
    "fastapi",
    "uvicorn",
    "jinja2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/michalskibinski109/py-draughts"
Documentation = "https://michalskibinski109.github.io/py-draughts/index.html"
Repository = "https://github.com/michalskibinski109/py-draughts"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "sphinx",
    "build",
    "rich",
    "pytest-benchmark",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
draughts = [
    "server/static/js/*",
    "server/static/css/*",
    "server/templates/*",
    "py.typed",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
