[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-draughts"
version = "1.6.4"
description = "Fastest python draughts library with advanced WEB UI, move generation and validation, PDN and FEN parsing and writing and advenced engine + benchmarking. Supports multiple variants of game."
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    { name = "Michał Skibiński", email = "mskibinski109@gmail.com" }
]
keywords = ["draughts", "checkers", "AI", "mini-max", "game", "board"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "numpy",
    "loguru",
    "fastapi",
    "uvicorn",
    "jinja2",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/michalskibinski109/py-draughts"
Documentation = "https://michalskibinski109.github.io/py-draughts/index.html"
Repository = "https://github.com/michalskibinski109/py-draughts"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "sphinx",
    "build",
    "rich",
    "pytest-benchmark",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
draughts = [
    "server/static/js/*",
    "server/static/css/*",
    "server/templates/*",
    "py.typed",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs", "examples", "_build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (used widely with FastAPI/typing patterns)
    "UP007", # Optional[X] vs X | None (kept for 3.9 compatibility readability)
    "UP045", # X | None vs Optional[X]
    "UP006", # Use list/dict instead of List/Dict (kept for 3.9 compatibility readability)
    "UP035", # typing.X is deprecated (kept for 3.9 compatibility readability)
    "B905",  # zip without explicit strict= (3.9 compatibility)
]

[tool.ruff.lint.per-file-ignores]
"draughts/__init__.py" = ["E402", "F401"]
"**/__init__.py" = ["F401"]
"test/**" = ["E402", "F401", "F841", "B"]
"tools/**" = ["B", "E402", "F401", "F541", "F841", "W291", "W293"]
