[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-draughts"
version = "1.8.1"
description = "Fastest Python draughts / checkers library (import: draughts). Bitboard move generation ~200x faster than pydraughts. PDN/FEN, alpha-beta engine, HUB protocol, web UI. 8 variants: International, American, Frisian, Russian, Brazilian, Antidraughts, Breakthrough, Frysk!"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    { name = "Michał Skibiński", email = "mskibinski109@gmail.com" }
]
keywords = [
    "draughts",
    "checkers",
    "international-draughts",
    "american-checkers",
    "english-draughts",
    "frisian-draughts",
    "russian-draughts",
    "brazilian-draughts",
    "antidraughts",
    "breakthrough",
    "frysk",
    "bitboard",
    "pdn",
    "fen",
    "alpha-beta",
    "minimax",
    "hub-protocol",
    "game-engine",
    "board-game",
    "AI",
    "reinforcement-learning",
    "pydraughts-alternative",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "numpy",
    "loguru",
    "fastapi",
    "uvicorn",
    "jinja2",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/miskibin/py-draughts"
Documentation = "https://miskibin.github.io/py-draughts/"
Repository = "https://github.com/miskibin/py-draughts"
Issues = "https://github.com/miskibin/py-draughts/issues"
Changelog = "https://github.com/miskibin/py-draughts/blob/main/changelog.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "sphinx",
    "build",
    "rich",
    "pytest-benchmark",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
draughts = [
    "server/static/js/*",
    "server/static/css/*",
    "server/templates/*",
    "py.typed",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs", "examples", "_build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (used widely with FastAPI/typing patterns)
    "UP007", # Optional[X] vs X | None (kept for 3.9 compatibility readability)
    "UP045", # X | None vs Optional[X]
    "UP006", # Use list/dict instead of List/Dict (kept for 3.9 compatibility readability)
    "UP035", # typing.X is deprecated (kept for 3.9 compatibility readability)
    "B905",  # zip without explicit strict= (3.9 compatibility)
]

[tool.ruff.lint.per-file-ignores]
"draughts/__init__.py" = ["E402", "F401"]
"**/__init__.py" = ["F401"]
"test/**" = ["E402", "F401", "F841", "B"]
"tools/**" = ["B", "E402", "F401", "F541", "F841", "W291", "W293"]
